--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -1,3 +1,22 @@
-.app-cointainer {
-    background-color: grey;
+.layout {
+    display: grid;
+    grid-template-columns: 240px auto;
+
+    &-container {
+        background-color: grey;
+        
+        &__body {
+            height: calc(100vh - 60px - 40px - 17px);
+            padding: 10px;
+            
+            &-left-nav {
+                background-color: blueviolet;
+                border: 1px solid blue;
+            }
+    
+            &-panel {
+                background-color: cadetblue;    
+            }
+        }
+    }
 }
