--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -6,7 +6,7 @@
         background-color: grey;
         
         &__body {
-            height: calc(100vh - 60px - 40px - 17px);
+            height: calc(100vh - 60px - 40px);
             padding: 10px;
             
             &-left-nav {
