--- a/styles/_performance.scss
+++ b/styles/_performance.scss
@@ -1,3 +1,22 @@
-.body-container {
-    background-color: blue;
+.performance-container {
+    display: grid;
+    grid-template-columns: 35% 65%;
+    grid-template-rows: auto auto;
+
+    &__payments {
+        grid-column: 1/2;
+        grid-row: 1/3;
+        background-color: burlywood;
+    }
+
+    &__graphic {
+        grid-column: 2/3;
+        grid-row: 1/2;
+    }
+
+    &__pending-payments {
+        grid-column: 2/3;
+        grid-row: 2/3;
+        background-color: cornflowerblue;
+    }
 }
