--- a/styles/_performance.scss
+++ b/styles/_performance.scss
@@ -1,3 +1,5 @@
+@import './variables';
+
 .performance-container {
     display: grid;
     grid-template-columns: 35% 65%;
@@ -7,16 +9,116 @@
         grid-column: 1/2;
         grid-row: 1/3;
         background-color: burlywood;
+        padding: 15px;
+
+        &-row, &-line {
+            @extend %head-row;
+        }
+
+        &-secondary {
+            @extend %secondary;
+        }
+
+        &-line {
+
+            &-primary {
+                @extend %primary;
+                margin: 0;
+                font-weight: bolder;
+                color: $palette-primary
+            }
+
+            &-button {
+                @extend %button;
+                background-color: $palette-primary;
+
+                &:hover {
+                    background-color: $palette-secondary;
+                }
+            }
+        }
+
+        &-consumed {
+            background-color: bisque;
+            padding: 10px;
+            box-shadow: 2px 2px 6px 2px #6c6c6c4d;
+
+            &-row {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: space-between;
+
+                &-secondary {
+                    @extend %secondary;
+                    font-weight: bold
+                }
+                &-terciary {
+                    @extend %terciary;
+                }
+                &-quaternary {
+                    @extend %quaternary;
+                }
+            }
+
+            &-progress {
+                width: 100%;
+                height: 16px;
+                
+                // Reset styles
+                appearance: none;
+                -webkit-appearance: none;
+                -moz-appearance: none;
+              
+                // Remove border in firefox
+                border: none;
+
+                &::-webkit-progress-bar {
+                    background-color: $palette-secondary;
+                    border-radius: 8px;
+                }
+
+                &::-webkit-progress-value {
+                    background-color: $palette-primary;
+                    border-radius: 8px;
+                }
+            }
+        }
+
     }
 
     &__graphic {
         grid-column: 2/3;
         grid-row: 1/2;
+        padding: 15px;
+
+        &-row {
+            @extend %head-row;
+        }
+
+        &-statistics {
+            background-color: darkgoldenrod;
+            width: 100%;
+            height: 400px;
+        }
     }
 
     &__pending-payments {
         grid-column: 2/3;
         grid-row: 2/3;
         background-color: cornflowerblue;
+        padding: 15px;
+
+        &-row {
+            @extend %head-row
+        }
+
+        &-table {
+
+            .head {
+                background-color: rgba(88, 88, 144,0.4);
+            }
+        }
+
     }
 }
