--- a/styles/_performance.scss
+++ b/styles/_performance.scss
@@ -42,6 +42,7 @@
             background-color: bisque;
             padding: 10px;
             box-shadow: 2px 2px 6px 2px #6c6c6c4d;
+            margin-bottom: 18px;
 
             &-row {
                 display: flex;
@@ -85,6 +86,41 @@
             }
         }
 
+        &-payroll {
+
+            &-secondary {
+                @extend %secondary;
+                font-weight: bold;
+            }
+
+            &-invoice {
+                
+                &-date {
+                    @extend %terciary;
+                    font-weight: bold;
+                }
+    
+                &-table {
+                    .head {
+                        @extend %quaternary;
+                        border: none;
+                    }
+                    
+                    .borders {
+                        border: none;
+                        border-left: 1px solid $table-border-primary;
+                        border-right: 1px solid $table-border-primary;
+                    }
+    
+                    .body {
+                        @extend %terciary;
+                        font-weight: bold;
+                        border: none;
+                    }
+                }
+
+            }
+        }
     }
 
     &__graphic {
