--- a/styles/_performance.scss
+++ b/styles/_performance.scss
@@ -1,31 +1,87 @@
 @import './variables';
 
 .performance-container {
+    background-color: #f8f8f8e6;
+    height: 100%;
     display: grid;
-    grid-template-columns: 35% 65%;
-    grid-template-rows: auto auto;
+    grid-template-columns: 65% 35%;
+    grid-template-rows: 56% 44%;
+
+    &__graphic {
+        // height: 100%;
+        background-color: chocolate;
+        grid-column: 1/2;
+        grid-row: 1/2;
+        padding: 15px;
+        border: 1px solid $table-border-primary;
+
+        display: grid;
+        grid-template-rows: 10% 90%;
+
+        &-row {
+            @extend %head-row;
+        }
+
+        &-statistics {
+            background-color: darkgoldenrod;
+            // width: 100%;
+            // height: 100%;
+        }
+    }
+
+    &__pending-payments {
+        grid-column: 1/2;
+        grid-row: 2/3;
+        background-color: cornflowerblue;
+        padding: 25px;
+        border: 1px solid $table-border-primary;
+
+        &-row {
+            @extend %head-row
+        }
+
+        &-table {
+
+            .head {
+                background-color: rgba(88, 88, 144,0.4);
+            }
+
+            .num {
+                font-family: $font-terciary;
+            }
+        }
+
+    }
 
     &__payments {
-        grid-column: 1/2;
+        grid-column: 2/3;
         grid-row: 1/3;
         background-color: burlywood;
-        padding: 15px;
+        padding: 50px 50px 45px 35px;
+        border: 1px solid $table-border-primary;
 
         &-row, &-line {
             @extend %head-row;
         }
 
         &-secondary {
-            @extend %secondary;
+            @extend %text-secondary;
+        }
+
+        &-row {
+            &-title {
+                font-family: $font-primary;
+            }
         }
 
         &-line {
 
             &-primary {
-                @extend %primary;
+                @extend %text-primary;
                 margin: 0;
                 font-weight: bolder;
-                color: $palette-primary
+                color: $palette-primary;
+                font-family: $font-terciary;
             }
 
             &-button {
@@ -51,14 +107,15 @@
                 justify-content: space-between;
 
                 &-secondary {
-                    @extend %secondary;
-                    font-weight: bold
+                    @extend %text-secondary;
+                    font-weight: bold;
+                    font-family: $font-terciary;
                 }
                 &-terciary {
-                    @extend %terciary;
+                    @extend %text-terciary;
                 }
                 &-quaternary {
-                    @extend %quaternary;
+                    @extend %text-quaternary;
                 }
             }
 
@@ -89,20 +146,20 @@
         &-payroll {
 
             &-secondary {
-                @extend %secondary;
+                @extend %text-secondary;
                 font-weight: bold;
             }
 
             &-invoice {
                 
                 &-date {
-                    @extend %terciary;
+                    @extend %text-terciary;
                     font-weight: bold;
                 }
     
                 &-table {
                     .head {
-                        @extend %quaternary;
+                        @extend %text-quaternary;
                         border: none;
                     }
                     
@@ -111,9 +168,13 @@
                         border-left: 1px solid $table-border-primary;
                         border-right: 1px solid $table-border-primary;
                     }
+
+                    .num {
+                        font-family: $font-terciary;
+                    }
     
                     .body {
-                        @extend %terciary;
+                        @extend %text-terciary;
                         font-weight: bold;
                         border: none;
                     }
@@ -121,40 +182,5 @@
 
             }
         }
-    }
-
-    &__graphic {
-        grid-column: 2/3;
-        grid-row: 1/2;
-        padding: 15px;
-
-        &-row {
-            @extend %head-row;
-        }
-
-        &-statistics {
-            background-color: darkgoldenrod;
-            width: 100%;
-            height: 400px;
-        }
-    }
-
-    &__pending-payments {
-        grid-column: 2/3;
-        grid-row: 2/3;
-        background-color: cornflowerblue;
-        padding: 15px;
-
-        &-row {
-            @extend %head-row
-        }
-
-        &-table {
-
-            .head {
-                background-color: rgba(88, 88, 144,0.4);
-            }
-        }
-
     }
 }
