--- a/styles/_performance.scss
+++ b/styles/_performance.scss
@@ -4,7 +4,7 @@
     background-color: #f8f8f8e6;
     height: 100%;
     display: grid;
-    grid-template-columns: 65% 35%;
+    grid-template-columns: 62.5% 36.5%;
     grid-template-rows: 56% 44%;
 
     &__graphic {
@@ -12,7 +12,7 @@
         background-color: chocolate;
         grid-column: 1/2;
         grid-row: 1/2;
-        padding: 15px;
+        padding: 80px 36px 10px;
         border: 1px solid $table-border-primary;
 
         display: grid;
@@ -24,7 +24,7 @@
 
         &-statistics {
             background-color: darkgoldenrod;
-            // width: 100%;
+            width: 100%;
             // height: 100%;
         }
     }
@@ -56,7 +56,7 @@
     &__payments {
         grid-column: 2/3;
         grid-row: 1/3;
-        background-color: burlywood;
+        // background-color: burlywood;
         padding: 50px 50px 45px 35px;
         border: 1px solid $table-border-primary;
 
