--- a/styles/layout/_navbar.scss
+++ b/styles/layout/_navbar.scss
@@ -1,7 +1,7 @@
 @import '../variables';
 
 .navbar-container {
-    height: 80px;
+    height: 66px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -46,11 +46,12 @@
     }
 
     &__icons {
-        width: 280px;
+        width: 135px;
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: space-evenly;
+        justify-content: space-between;
+        padding: 0 8px;
 
         .icon {
             filter: invert(99%) sepia(81%) saturate(317%) hue-rotate(345deg) brightness(107%) contrast(92%);
