Styles are finished in the left-nav component

--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -22,6 +22,7 @@
                 // padding: 10px;
                 
                 &-panel {
+                    // background-color: gray;
                     height: 100%;  
                 }
             }
