--- a/styles/_performance.scss
+++ b/styles/_performance.scss
@@ -1,64 +1,95 @@
 @import './variables';
 
 .performance-container {
-    background-color: #f8f8f8e6;
+    background-color: #fff;
     height: 100%;
     display: grid;
     grid-template-columns: 62.5% 36.5%;
     grid-template-rows: 56% 44%;
 
     &__graphic {
-        // height: 100%;
-        background-color: chocolate;
+        width: 100%;
         grid-column: 1/2;
         grid-row: 1/2;
-        padding: 80px 36px 10px;
-        border: 1px solid $table-border-primary;
+        padding: 60px 36px 26px;
+        // border: 1px solid $table-border-primary;
 
         display: grid;
         grid-template-rows: 10% 90%;
 
         &-row {
             @extend %head-row;
+
+            &-title {
+                font-weight: bold;
+            }
+
+            &-labels {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+
+                &-label {
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    justify-content: center;
+                    gap: 5px;
+                        
+                    &-line {
+                        background-color: rgb(212, 127, 23);
+                        width: 25px;
+                        height: 5px;
+                    }
+
+                    &-name {
+                        @extend %text-quaternary;
+                        margin: 0;
+                    }
+                }
+            }
+
+            &-order {
+                @extend %select;
+            }
         }
 
         &-statistics {
-            background-color: darkgoldenrod;
-            width: 100%;
-            // height: 100%;
+            width: 98%;
+            height: 100%;
         }
     }
 
     &__pending-payments {
         grid-column: 1/2;
         grid-row: 2/3;
-        background-color: cornflowerblue;
-        padding: 25px;
-        border: 1px solid $table-border-primary;
+        padding: 25px 35px;
+        // border: 1px solid $table-border-primary;
 
         &-row {
-            @extend %head-row
-        }
+            @extend %head-row;
 
-        &-table {
-
-            .head {
-                background-color: rgba(88, 88, 144,0.4);
+            &-title {
+                font-weight: bold;
             }
 
-            .num {
-                font-family: $font-terciary;
+            &-link {
+                @extend %text-terciary;
+                text-decoration: none;
+                color: $palette-secondary;
+                font-weight: bolder;
+            }:hover {
+                color: $palette-primary;
             }
         }
-
     }
 
     &__payments {
         grid-column: 2/3;
         grid-row: 1/3;
-        // background-color: burlywood;
+        background-color: burlywood;
         padding: 50px 50px 45px 35px;
-        border: 1px solid $table-border-primary;
+        border-left: 1.6px solid $table-border-primary;
 
         &-row, &-line {
             @extend %head-row;
@@ -70,7 +101,7 @@
 
         &-row {
             &-title {
-                font-family: $font-primary;
+                font-family: $font-primary; 
             }
         }
 
@@ -80,7 +111,7 @@
                 @extend %text-primary;
                 margin: 0;
                 font-weight: bolder;
-                color: $palette-primary;
+                color: $palette-secondary;
                 font-family: $font-terciary;
             }
 
