--- a/styles/_performance.scss
+++ b/styles/_performance.scss
@@ -87,7 +87,7 @@
     &__payments {
         grid-column: 2/3;
         grid-row: 1/3;
-        background-color: burlywood;
+        // background-color: burlywood;
         padding: 50px 50px 45px 35px;
         border-left: 1.6px solid $table-border-primary;
 
@@ -97,6 +97,7 @@
 
         &-secondary {
             @extend %text-secondary;
+            font-weight: bold;
         }
 
         &-row {
@@ -126,9 +127,9 @@
         }
 
         &-consumed {
-            background-color: bisque;
-            padding: 10px;
-            box-shadow: 2px 2px 6px 2px #6c6c6c4d;
+            // background-color: bisque;
+            padding: 20px 35px 5px 20px;
+            box-shadow: 1px 1px 3px 1px #6c6c6c4d;
             margin-bottom: 18px;
 
             &-row {
@@ -141,47 +142,72 @@
                     @extend %text-secondary;
                     font-weight: bold;
                     font-family: $font-terciary;
+                    margin: 0;
+                    margin-bottom: 8px;
                 }
                 &-terciary {
                     @extend %text-terciary;
                 }
                 &-quaternary {
                     @extend %text-quaternary;
+                    margin: 0;
+                    margin-bottom: 3px;
                 }
             }
 
-            &-progress {
-                width: 100%;
-                height: 16px;
-                
-                // Reset styles
-                appearance: none;
-                -webkit-appearance: none;
-                -moz-appearance: none;
-              
-                // Remove border in firefox
-                border: none;
+            &-bar {
+                padding-bottom: 15px;
+                border-bottom: 1px solid $table-border-primary;
 
-                &::-webkit-progress-bar {
-                    background-color: $palette-secondary;
-                    border-radius: 8px;
+                &-progress {
+                    width: 100%;
+                    height: 13px;
+                    
+                    // Reset styles
+                    appearance: none;
+                    -webkit-appearance: none;
+                    -moz-appearance: none;
+                  
+                    // Remove border in firefox
+                    border: none;
+    
+                    &::-webkit-progress-bar {
+                        background-color: $palette-primary;
+                        border-radius: 8px;
+                    }
+    
+                    &::-webkit-progress-value {
+                        background-color: $palette-secondary;
+                        border-radius: 8px;
+                    }
                 }
+            }
 
-                &::-webkit-progress-value {
-                    background-color: $palette-primary;
-                    border-radius: 8px;
-                }
+            .donw {
+                margin-top: 20px;
+                font-weight: bold;
             }
         }
 
         &-payroll {
+            margin-top: 45px;
+            &-row {
+                @extend %head-row;
+                
+                &-secondary {
+                    margin: 0;
+                    @extend %text-secondary;
+                    font-weight: bold;
+                }
 
-            &-secondary {
-                @extend %text-secondary;
-                font-weight: bold;
+                &-select {
+                    @extend %select;
+                }
             }
 
             &-invoice {
+                margin-top: 46px;
+                margin-left: 21px;
                 
                 &-date {
                     @extend %text-terciary;
