--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -6,7 +6,8 @@ $font-terciary: 'Poppins';
 
 // Colors
 $palette-primary: #4c20df;
-$palette-secondary: #cb65e2;
+// $palette-secondary: #cb65e2;
+$palette-secondary: rgba(221, 90, 236, 1);
 $palette-terciary: #4c57e9;
 
 $text-primary: #030303;
