--- a/styles/_performance.scss
+++ b/styles/_performance.scss
@@ -28,6 +28,7 @@
                 display: flex;
                 flex-direction: row;
                 align-items: center;
+                gap: 30px;
 
                 &-label {
                     display: flex;
@@ -87,7 +88,7 @@
     &__payments {
         grid-column: 2/3;
         grid-row: 1/3;
-        background-color: burlywood;
+        // background-color: burlywood;
         padding: 50px 50px 45px 35px;
         border-left: 1.6px solid $table-border-primary;
 
