--- a/styles/layout/_navbar.scss
+++ b/styles/layout/_navbar.scss
@@ -7,6 +7,11 @@
     align-items: center;
     justify-content: space-between;
 
+    &__slogan {
+        display: none;
+        margin-left: 36px;
+    }
+
     &__acount {
         display: flex;
         flex-direction: row;
@@ -63,3 +68,19 @@
         }
     }
 }
+
+@media screen and (max-width: 900px) {
+    .navbar-container {
+
+        &__acount {
+            
+            &-alerts {
+                display: none;
+            }
+
+        }
+
+    }
+}
+
+// @media screen and (max-width: 700px) {}
