Layout, performance and table components are now responsive
The Layout component is  now responsive at 700px

The performance component is now responsive at 700px and 450px

The Table component is now responsive at 450px

--- a/styles/_table.scss
+++ b/styles/_table.scss
@@ -32,5 +32,26 @@
     }
 }
 
+@media screen and (max-width: 450px) {
+    .table {
+        &-container {
+            &-components {
+                min-width: 530px;
+                
+                thead {
+                    height: 50px;
+                }
+                
+                tbody {
+                    height: 36px;
+                }
+            
+                th, td {
+                    font-size: 0.8rem;
+                }
+            }
+        }
+    }
+}
 
 
