--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -15,7 +15,7 @@
         &__full {
 
             &-navbar {
-                border-bottom: 1.6px solid $table-border-primary;
+                border-bottom: 2px solid $table-border-primary;
             }
             
             &-base {
@@ -36,19 +36,45 @@
 
 @media screen and (max-width: 1200px) {
     .layout {
-        
+
         &-container {
     
             &__full {
                 
                 &-base {
-                    
+                    width: 100%;
+                    height: calc(100vh - 68px - 60px);
+                    overflow-y: auto;
+                
+                    position: relative;
+
                     &-panel {
-                        height: 100%;
+                        position: absolute;
+                        width: 100%;
+                        height: auto;
                     }
                 }
             }
         }
+    
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .layout {
+        padding: 18px 18px;
+
+        &-container {
+    
+            &__full {
+                grid-column: 1/3;
+            }
+
+            &__left-nav {
+                display: none;
+            }
+        }
+
     
     }
 }
