--- a/styles/_performance.scss
+++ b/styles/_performance.scss
@@ -63,7 +63,6 @@
     }
 
     &__pending-payments {
-        // background-color: rgb(206, 206, 206);
         width: 100%;
         height: 100%;
 
@@ -121,10 +120,8 @@
     }
 
     &__payments {
-        // background-color: blanchedalmond;
         grid-column: 2/3;
         grid-row: 1/3;
-        // background-color: burlywood;
         padding: 50px 50px 10px 35px;
         border-left: 1.6px solid $table-border-primary;
 
@@ -229,9 +226,10 @@
         }
 
         &-payroll {
-            // background-color: chocolate;
+            width: 100%;
             // height: 100%;
             margin-top: 45px;
+            
             &-row {
                 @extend %head-row;
                 
@@ -247,7 +245,7 @@
             }
 
             &-invoice {
-                width: 100%;
+                width: calc(100% - 21px);
                 height: 100%;
                 
                 margin-top: 38px;
@@ -265,9 +263,7 @@
                     overflow-x: auto;
 
                     &-container {
-                        // background-color: bisque;
                         position: absolute;
-                        // width: 100%;
                         width: calc(100% - 20px);
                         min-width: 500px;
                         // overflow-x: auto;
@@ -303,11 +299,11 @@
 @media screen and (max-width: 1200px) {
     .performance-container {
         grid-template-rows: auto auto auto;
-
     
         &__graphic {
             grid-column: 1/3;
             grid-row: 2/3;
+            padding-right: 36px;
     
             &-statistics {
                 width: 98%;
@@ -318,6 +314,7 @@
         &__pending-payments {
             grid-column: 1/3;
             grid-row: 3/4;
+            padding-right: 36px;
             
             &-table {
             
@@ -330,310 +327,208 @@
         &__payments {
             grid-column: 1/3;
             grid-row: 1/2;
+            border: none;
+            padding-top: 40px;
+            padding-right: 36px;
         }
     
     }
 }
 
-// @media screen and (max-width: 700px) {
-//     .performance-container {
-//         // display: flex;
-//         // grid-template-columns: 62% 38%;
-//         grid-template-rows: auto auto auto;
-
-    
-//         &__graphic {
-//             width: 100%;
-//             //
-//             grid-column: 1/3;
-//             grid-row: 2/3;
-//             padding: 60px 36px 26px;
-//             // border: 1px solid $table-border-primary;
-    
-//             display: grid;
-//             grid-template-rows: 10% 90%;
-    
-//             &-row {
-//                 @extend %head-row;
-    
-//                 &-title {
-//                     font-weight: bold;
-//                 }
-    
-//                 &-labels {
-//                     display: flex;
-//                     flex-direction: row;
-//                     align-items: center;
-//                     gap: 30px;
-    
-//                     &-label {
-//                         display: flex;
-//                         flex-direction: row;
-//                         align-items: center;
-//                         justify-content: center;
-//                         gap: 5px;
-                            
-//                         &-line {
-//                             background-color: rgb(212, 127, 23);
-//                             width: 25px;
-//                             height: 5px;
-//                         }
-    
-//                         &-name {
-//                             @extend %text-quaternary;
-//                             margin: 0;
-//                         }
-//                     }
-//                 }
-    
-//                 &-order {
-//                     @extend %select;
-//                 }
-//             }
-    
-//             &-statistics {
-//                 width: 98%;
-//                 height: 300px;
-//             }
-//         }
-    
-//         &__pending-payments {
-//             // background-color: rgb(206, 206, 206);
-//             width: 100%;
-//             height: 100%;
-    
-//             grid-column: 1/3;
-//             grid-row: 3/4;
-//             padding: 25px 35px 0;
-//             // border: 1px solid $table-border-primary;
-    
-//             display: grid;
-//             grid-template-rows: 17% auto;
-    
-//             &-row {
-//                 // background-color: cadetblue;
-//                 @extend %head-row;
-    
-//                 &-title {
-//                     font-weight: bold;
-//                 }
-    
-//                 &-link {
-//                     @extend %text-terciary;
-//                     text-decoration: none;
-//                     color: $palette-secondary;
-//                     font-weight: bolder;
-//                 }:hover {
-//                     color: $palette-primary;
-//                 }
-//             }
-    
-//             &-table {
-//                 // background-color: bisque;
-//                 width: 100%;
-//                 height: 100%;
-//                 position: relative;
-    
-//                 &-on {
-//                     background-color: rgba(70, 113, 255, 0.1);
-        
-//                     width: 100%;
-//                     height: 60px;
-//                     border-radius: 10px;
-                    
-//                     position: absolute;
-//                     top: 8px;
-        
-//                     z-index: 1;
-//                 }
-    
-//                 &-component {
-//                     // background-color: bisque;
-//                     height: 270px;
-//                     width: 100%;
-//                     z-index: 0;
-//                 }
-//             }
-//         }
-    
-//         &__payments {
-//             // background-color: blanchedalmond;
-//             grid-column: 1/3;
-//             grid-row: 1/2;
-//             // background-color: burlywood;
-//             padding: 50px 50px 10px 35px;
-//             border-left: 1.6px solid $table-border-primary;
-    
-//             overflow-y: auto;
-    
-//             &-row, &-line {
-//                 @extend %head-row;
-//             }
-    
-//             &-secondary {
-//                 @extend %text-secondary;
-//                 font-weight: bold;
-//             }
-    
-//             &-row {
-//                 &-title {
-//                     font-family: $font-primary; 
-//                 }
-//             }
-    
-//             &-line {
-    
-//                 &-primary {
-//                     @extend %text-primary;
-//                     margin: 0;
-//                     font-weight: bolder;
-//                     color: $palette-secondary;
-//                     font-family: $font-terciary;
-//                 }
-    
-//                 &-button {
-//                     @extend %button;
-//                     background-color: $palette-primary;
-    
-//                     &:hover {
-//                         background-color: $palette-secondary;
-//                     }
-//                 }
-//             }
-    
-//             &-consumed {
-//                 // background-color: bisque;
-//                 padding: 20px 35px 5px 20px;
-//                 box-shadow: 1px 1px 3px 1px #6c6c6c4d;
-//                 margin-bottom: 18px;
-    
-//                 &-row {
-//                     display: flex;
-//                     flex-direction: row;
-//                     align-items: center;
-//                     justify-content: space-between;
-    
-//                     &-secondary {
-//                         @extend %text-secondary;
-//                         font-weight: bold;
-//                         font-family: $font-terciary;
-//                         margin: 0;
-//                         margin-bottom: 8px;
-//                     }
-//                     &-terciary {
-//                         @extend %text-terciary;
-//                     }
-//                     &-quaternary {
-//                         @extend %text-quaternary;
-//                         margin: 0;
-//                         margin-bottom: 3px;
-//                     }
-//                 }
-    
-//                 &-bar {
-//                     padding-bottom: 15px;
-//                     border-bottom: 1px solid $table-border-primary;
-    
-//                     &-progress {
-//                         width: 100%;
-//                         height: 13px;
-                        
-//                         // Reset styles
-//                         appearance: none;
-//                         -webkit-appearance: none;
-//                         -moz-appearance: none;
-                      
-//                         // Remove border in firefox
-//                         border: none;
-        
-//                         &::-webkit-progress-bar {
-//                             background-color: $palette-primary;
-//                             border-radius: 8px;
-//                         }
-        
-//                         &::-webkit-progress-value {
-//                             background-color: $palette-secondary;
-//                             border-radius: 8px;
-//                         }
-//                     }
-//                 }
-    
-//                 .donw {
-//                     margin-top: 20px;
-//                     font-weight: bold;
-//                 }
-//             }
-    
-//             &-payroll {
-//                 // background-color: chocolate;
-//                 // height: 100%;
-//                 margin-top: 45px;
-//                 &-row {
-//                     @extend %head-row;
-                    
-//                     &-secondary {
-//                         margin: 0;
-//                         @extend %text-secondary;
-//                         font-weight: bold;
-//                     }
-    
-//                     &-select {
-//                         @extend %select;
-//                     }
-//                 }
-    
-//                 &-invoice {
-//                     width: 100%;
-//                     height: 100%;
-                    
-//                     margin-top: 38px;
-//                     margin-left: 21px;
-                    
-//                     &-date {
-//                         @extend %text-terciary;
-//                         font-weight: bold;
-//                     }
-        
-//                     &-table {
-//                         width: 100%;
-//                         height: 90px;
-//                         position: relative;
-//                         overflow-x: auto;
-    
-//                         &-container {
-//                             // background-color: bisque;
-//                             position: absolute;
-//                             // width: 100%;
-//                             width: calc(100% - 20px);
-//                             min-width: 500px;
-//                             // overflow-x: auto;
-        
-//                             .head {
-//                                 @extend %text-quaternary;
-//                                 border: none;
-//                             }
-                            
-//                             .borders {
-//                                 border: none;
-//                                 border-left: 1px solid $table-border-primary;
-//                                 border-right: 1px solid $table-border-primary;
-//                             }
-        
-//                             .num {
-//                                 font-family: $font-terciary;
-//                             }
+@media screen and (max-width: 700px) {
+    .performance-container {
+        &__graphic {
+            grid-template-rows: auto auto;
+            padding: 36px 26px 26px;
             
-//                             .body {
-//                                 @extend %text-terciary;
-//                                 font-weight: bold;
-//                                 border: none;
-//                             }
-//                         }
-//                     }
+
+            &-row {
+                width: 100%;
+                display: grid;
+                grid-template-columns: auto auto;
+                grid-template-rows: 1fr 1fr;
+            
+                &-title {
+                    grid-column: 1/2;
+                }
     
-//                 }
-//             }
-//         }
+                &-labels {
+                    grid-column: 1/3;
+                    grid-row: 2/3;
+                    
+                    margin-top: 20px;
+                    justify-content: center;
+                }
     
-//     }
-// }
+                &-order {
+                    grid-column: 2/3;
+
+                }
+            }
+    
+            &-statistics {
+                width: 98%;
+                height: 250px;
+            }
+        }
+    
+        &__pending-payments {
+            padding: 25px 26px 0;
+        }
+    
+        &__payments {
+            padding: 36px 26px 10px;
+        }
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .performance-container {
+    
+        &__graphic {
+
+            &-row {
+                width: 100%;
+                grid-template-columns: 1fr;
+                grid-template-rows: 1fr 1fr 1fr;
+                align-items: center;
+                justify-content: flex-start;
+                
+                &-title {
+                    grid-column: 1/3;
+                    grid-row: 1/2;
+                    margin-bottom: 16px;
+                }
+    
+                &-labels {
+                    grid-column: 1/3;
+                    grid-row: 3/4;
+                }
+    
+                &-order {
+                    grid-column: 1/3;
+                    grid-row: 2/3;
+                    height: 30px;
+                    width: 100%;
+                }
+            }
+    
+            &-statistics {
+                width: 98%;
+                height: 200px;
+            }
+        }
+    
+        &__pending-payments {
+    
+            &-row {
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+        
+                &-link {
+                    width: 100%;
+                    text-align: right;
+                    font-size: 0.7rem;
+                }
+            }
+    
+            &-table {
+                margin-top: 18px;
+
+                &-on {
+                    height: 45px;
+                    top: 2px;
+                }
+    
+                &-component {
+                    height: 180px;
+                }
+            }
+        }
+    
+        &__payments {
+            padding: 20px 26px 10px;
+        
+            &-line {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 8px;
+                margin-bottom: 26px;
+
+                &-primary {
+                    font-size: 1.6rem;
+                }
+                
+                &-button {
+                    width: 100%;
+                    margin: 0;
+                }
+            }
+    
+            &-consumed {
+    
+                &-row {
+                    
+                    &-terciary {
+                        margin: 0;
+                        font-size: 0.8rem;
+                    }
+                }
+    
+                &-bar {
+                    padding-bottom: 8px;
+                }
+    
+                .donw {
+                    flex-direction: column;
+                    gap: 5px;
+
+                    margin-top: 0px;
+                    margin-bottom: 8px;
+                }
+            }
+    
+            &-payroll {
+                margin-top: 30px;
+                
+                &-row {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-start;
+                    gap: 15px;
+
+                    margin-bottom: 25px;
+
+                    &-select {
+                        height: 30px;
+                        width: 100%;
+                    }
+                }
+    
+                &-invoice {
+                    margin-top: 15px;
+                    margin-left: 16px;
+                    
+                    &-table {
+
+                        &-container {
+                            min-width: 350px;
+        
+                            .head {
+                                font-size: 0.7rem;
+                            }
+                            
+                            .num {
+                                font-size: 0.75rem;
+                            }
+                        }
+                    }
+    
+                }
+            }
+        }
+    }
+}
