The navbar component is now responsive at 700px and 450px

--- a/styles/layout/_navbar.scss
+++ b/styles/layout/_navbar.scss
@@ -83,4 +83,35 @@
     }
 }
 
-// @media screen and (max-width: 700px) {}
+@media screen and (max-width: 700px) {
+    .navbar-container {
+    
+        &__slogan {
+            display: block;
+            margin-left: 26px;
+        }
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .navbar-container {
+        
+        &__acount {
+            
+            &-greeting {
+                margin: 0;
+                h3 {
+                    font-size: 1.2rem;
+                }
+            }
+        }
+
+        &__icons {
+            width: 40px;
+            
+            &-bell {
+                display: none;
+            }
+        }
+    }
+}
