Line color is implemented in graphic-row-labels-label-line element by array in sass

--- a/styles/_performance.scss
+++ b/styles/_performance.scss
@@ -39,9 +39,13 @@
                     gap: 5px;
                         
                     &-line {
-                        background-color: rgb(212, 127, 23);
-                        width: 25px;
-                        height: 5px;
+                        @each $line, $color in $lines {
+                            &-#{$line} {
+                                background-color: $color;
+                                width: 25px;
+                                height: 5px;
+                            }
+                        }
                     }
 
                     &-name {
