--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -1,8 +1,8 @@
 @import './variables';
 
 .layout {
-    height: 100vh;
-    width: 100vw ;
+    height: calc(100vh - 30px * 2);
+    width: calc(100vw - 40px * 2);
     padding: 30px 40px;
 
     &-container {
@@ -13,6 +13,7 @@
         font-family: $font-secondary;
 
         &__full {
+            width: 100%;
 
             &-navbar {
                 border-bottom: 2px solid $table-border-primary;
@@ -20,9 +21,11 @@
             
             &-base {
                 height: 100%;
+                width: 100%;
                 
                 &-panel {
                     height: calc(100vh - 68px - 60px);
+                    
                 }
             }
         }
