--- a/styles/_performance.scss
+++ b/styles/_performance.scss
@@ -8,13 +8,15 @@
     grid-template-rows: 56% 44%;
 
     &__graphic {
-        width: 100%;
+        height: calc(100% - 60px - 26px);
+        width: calc(100% - 36px * 2);
         grid-column: 1/2;
         grid-row: 1/2;
         padding: 60px 36px 26px;
         
         display: grid;
         grid-template-rows: 10% 90%;
+        position: relative;
 
         &-row {
             @extend %head-row;
@@ -65,8 +67,8 @@
     }
 
     &__pending-payments {
-        width: 100%;
-        height: 100%;
+        height: calc(100% - 25px);
+        width: calc(100% - 35px * 2);
 
         grid-column: 1/2;
         grid-row: 2/3;
